# ai-invention-f5f9f2-simplicial-constrained-oblique-tree-sums

./: README.md
dataset_iter1_sc_ots_tabular/demo/: data_code_demo.ipynb
dataset_iter1_sc_ots_tabular/src/: data.py  mini_data_out.json  preview_data_out.json
evaluation_iter3_comprehensive_s/demo/: eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter3_comprehensive_s/src/: eval.py  eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter4_definitive_fina/demo/: eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter4_definitive_fina/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
experiment_iter2_baseline_benchm/demo/: method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_baseline_benchm/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_sc_ots_simplici/demo/: method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_sc_ots_simplici/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_simplicial_comp/demo/: method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_simplicial_comp/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_sc_ots_ablation/demo/: method_code_demo.ipynb  mini_demo_data.json
experiment_iter3_sc_ots_ablation/src/: combine_results.py  (+4 more)
experiment_iter3_sc_ots_v2_simpl/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
paper/: paper.tex  references.bib
paper_latex/: paper.tex
(+21 files in other folders)
