[project]
name = "sc-ots-experiment"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "gudhi>=3.11.0",
    "dcor>=0.6",
    "imodels>=2.0.4",
    "xgboost>=2.0",
    "interpret>=0.6",
    "shap>=0.44",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "loguru",
]
