[project]
name = "sc-ots-experiment"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "loguru>=0.7",
    "dcor>=0.6",
    "gudhi>=3.8",
    "hyppo>=0.4",
    "networkx>=3.0",
]
