[project]
name = "sc-ots-experiment"
version = "0.1.0"
requires-python = ">=3.10,<3.12"

[project.dependencies]
dependencies = [
    "gudhi>=3.9",
    "dcor>=0.6",
    "imodels>=1.4",
    "xgboost>=2.0",
    "interpret>=0.6",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "loguru>=0.7",
    "pyyaml>=6.0",
]
